alterando arquitetura do projeto

--- a/app/Comunicados/comunicados-tpl.html
+++ b/app/Comunicados/comunicados-tpl.html
@@ -1,5 +1,4 @@
-﻿<div class="row">
-
+<div ng-controller="HomeController" class="row">
     <!-- Earnings (Monthly) Card Example -->
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-primary shadow h-100 py-2">
@@ -76,8 +75,8 @@
 <!-- Content Row -->
 
 <div class="row">
-@foreach (var item in Model)
-{
+    @foreach (var item in Model)
+    {
     <!-- Pie Chart -->
     <div class="col-xl-4 col-lg-5">
         <div class="card shadow mb-4">
@@ -88,7 +87,7 @@
                 </div>
                 <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
+                        aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                     </a>
                 </div>
@@ -105,5 +104,5 @@
             </div>
         </div>
     </div>
-}
+    }
 </div>
