--- a/app/Comunicados/comunicados-tpl.html
+++ b/app/Comunicados/comunicados-tpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="HomeController" class="row">
+<div ng-controller="ComunicadosController as vm" class="row">
     <!-- Earnings (Monthly) Card Example -->
     <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-primary shadow h-100 py-2">
@@ -61,7 +61,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Comunicados</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">1</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-comments fa-3x text-gray-600"></i>
@@ -75,15 +75,14 @@
 <!-- Content Row -->
 
 <div class="row">
-    @foreach (var item in Model)
-    {
+
     <!-- Pie Chart -->
-    <div class="col-xl-4 col-lg-5">
+    <div class="col-xl-4 col-lg-5" ng-repeat="comunicado in vm.comunicado">
         <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <div class="text-gray-800">
-                    <h3 style="margin-top: 10px">Comunicado do @Html.DisplayFor(modelItem => item.NomeSindico)</h3>
+                    <h3 style="margin-top: 10px">Comunicado do {{comunicado.autor}}</h3>
                 </div>
                 <div class="dropdown no-arrow">
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
@@ -96,13 +95,13 @@
             <div class="card-body">
                 <div class="">
                     <h5 class="">
-                        @Html.DisplayFor(modelItem => item.Titulo)
+                        {{comunicado.titulo}}
                     </h5>
                     <hr>
-                    @Html.DisplayFor(modelItem => item.Descricao)
+                    {{comunicado.texto}}
                 </div>
             </div>
         </div>
     </div>
-    }
+    
 </div>
