--- a/app/Home/home-tpl.html
+++ b/app/Home/home-tpl.html
@@ -218,7 +218,7 @@
                     <!-- Page Heading -->
 
 
-                    <home-tpl></home-tpl>
+                    <comunicados-page></comunicados-page>
 
                 </div>
                 <!-- /.container-fluid -->
