--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,12 @@
     <script src="app.js"></script>
     <script src="app.config.js"></script>
     <script src="Home/home-module.js"></script>
+    <script src="Comunicados/comunicados-module.js"></script>
     <script src="Home/home-controller.js"></script>
     <script src="Home/home-component.js"></script>
+    <script src="Comunicados/comunicados-controller.js"></script>
+    <script src="Comunicados/comunicados-diretive.js"></script>
+    <script src="Comunicados/comunicados-service.js"></script>
     <script src="lib/fontawesome-free/js/all.min.js"></script>
 </head>
 
