--- a/app/Comunicados/comunicados-tpl.html
+++ b/app/Comunicados/comunicados-tpl.html
@@ -1,70 +1,103 @@
-<div ng-controller="ComunicadosController as vm" class="row">
-    <!-- Earnings (Monthly) Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-primary shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Reservas</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
-                    </div>
-                    <div class="col-auto">
-                        <i class="fa fa-calendar-alt fa-3x text-gray-600"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Earnings (Monthly) Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-success shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Síndicos</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
-                    </div>
-                    <div class="col-auto">
-                        <div class="sidebar-brand-icon rotate-n-15">
-                            <i class="fa fa-user-alt fa-3x text-gray-600"></i>
+<div ng-controller="ComunicadosController as vm">
+    <div class="row">
+
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Reservas</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fa fa-calendar-alt fa-3x text-gray-600"></i>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Earnings (Monthly) Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-info shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Ocorrência</div>
-                        <div class="row no-gutters align-items-center">
-                            <div class="col-auto">
-                                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">1</div>
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-success shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Síndicos</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="sidebar-brand-icon rotate-n-15">
+                                <i class="fa fa-user-alt fa-3x text-gray-600"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="col-auto">
-                        <i class="fas fa-book fa-3x text-gray-600"></i>
+                </div>
+            </div>
+        </div>
+        <!-- Earnings (Monthly) Card Example -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-info shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Ocorrência</div>
+                            <div class="row no-gutters align-items-center">
+                                <div class="col-auto">
+                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">1</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-book fa-3x text-gray-600"></i>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Pending Requests Card Example -->
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-warning shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Comunicados</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
+        <!-- Pending Requests Card Example -->
+        <div class="col-xl-3 col-md-6 mb-4">
+            <div class="card border-left-warning shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Comunicados</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{vm.comunicados[0].autor}}</div>
+                        </div>
+                        <div class="col-auto">
+                            <i class="fas fa-comments fa-3x text-gray-600"></i>
+                        </div>
                     </div>
-                    <div class="col-auto">
-                        <i class="fas fa-comments fa-3x text-gray-600"></i>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="row">
+        <!-- Pie Chart -->
+        <div class="col-xl-4 col-lg-5" ng-repeat="comunicado in vm.comunicados">
+            <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                    <div class="text-gray-800">
+                        <h3 style="margin-top: 10px">Comunicado do {{comunicado.autor}}</h3>
+                    </div>
+                    <div class="dropdown no-arrow">
+                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                    <div class="">
+                        <h5 class="">
+                            {{comunicado.titulo}}
+                        </h5>
+                        <hr>
+                        {{comunicado.texto}}
                     </div>
                 </div>
             </div>
@@ -73,35 +106,3 @@
 </div>
 
 <!-- Content Row -->
-
-<div class="row">
-
-    <!-- Pie Chart -->
-    <div class="col-xl-4 col-lg-5" ng-repeat="comunicado in vm.comunicado">
-        <div class="card shadow mb-4">
-            <!-- Card Header - Dropdown -->
-            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <div class="text-gray-800">
-                    <h3 style="margin-top: 10px">Comunicado do {{comunicado.autor}}</h3>
-                </div>
-                <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </a>
-                </div>
-            </div>
-            <!-- Card Body -->
-            <div class="card-body">
-                <div class="">
-                    <h5 class="">
-                        {{comunicado.titulo}}
-                    </h5>
-                    <hr>
-                    {{comunicado.texto}}
-                </div>
-            </div>
-        </div>
-    </div>
-    
-</div>
