--- a/app/Comunicados/comunicados-tpl.html
+++ b/app/Comunicados/comunicados-tpl.html
@@ -63,7 +63,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Comunicados</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{vm.comunicados[0].autor}}</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{vm.comunicados}}</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-comments fa-3x text-gray-600"></i>
